--- a/templates/dashboard.ejs
+++ b/templates/dashboard.ejs
@@ -55,6 +55,7 @@
 
     <script>
         let positionCount = 1;
+        // function to add a row to positions for portfolio creation
         function addPosition() {
             positionCount++;
             const positionsDiv = document.getElementById('positions');
@@ -66,7 +67,7 @@
                 </div>`;
             positionsDiv.insertAdjacentHTML('beforeend', positionHTML);
         }
-
+        // function to delete portfolio, brings up confirm and sends request
         async function deletePortfolio(portfolioName) {
             if (confirm(`Are you sure you want to delete the portfolio "${portfolioName}"?`)) {
                 await fetch('/delete-portfolio', {
@@ -76,7 +77,7 @@
                     },
                     body: JSON.stringify({ portfolioName })
                 });
-                window.location.reload(); // Refresh the dashboard
+                window.location.reload();
             }
         }
     </script>
